# Homework

./: README.md
01.Clean-Code/: library_management.c  library_management.h
02.Designpattern/Builder/: .gitignore  Makefile  README.md  build.sh  build_test.sh
02.Designpattern/Builder/CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
02.Designpattern/Builder/Inc/: Gpio.h  Uart_Builder.h  Uart_Driver.h
02.Designpattern/Builder/Src/: Gpio.c  Uart_Builder.c  Uart_Driver.c  main.c
02.Designpattern/Builder/scripts/: build.sh  build_test.sh
02.Designpattern/Builder/tests/: CMakeLists.txt  Uart_Builder_test.cpp
02.Designpattern/Factory/: Makefile  README.md  build.sh  main.c
02.Designpattern/Factory/Inc/: Adc.h  Adc_Builder.h  Sensor.h  Sensor_Factory.h  TempSensor.h
02.Designpattern/Factory/Src/: Adc.c  Adc_Builder.c  Sensor_Factory.c  Tempsensor.c  syscalls.c
02.Designpattern/Singleton/: Makefile  README.md  build.sh  build_test.sh
02.Designpattern/Singleton/Inc/: Adc.h  SensorManager_Singleton.h  Uart_Builder.h  Uart_Driver.h
02.Designpattern/Singleton/Src/: Adc.c  SensorManager_Singleton.c  Uart_Builder.c  Uart_Driver.c  main.c  syscalls.c
02.Designpattern/Singleton/tests/: CMakeLists.txt  Sensor_Singleton_test.cpp
